--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "vite": "^5.4.8"
+  },
+  "prettier": {
+    "tabWidth": 4
   }
 }
